[website-fancy] fix popup going out of view

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,8 @@
 	opacity: 0.90;
 	z-index: 200;
 	font-size: max(14px, 0.75vw);
+  height: min-content;
+  width: 10%;
 }
 
 .title {
